# VectorOS

./: .env.example  .gitignore  AI_INSIGHTS_ARCHITECTURE.md  AUTONOMOUS_ARCHITECTURE.md  AUTONOMOUS_MONITORING.md  COMPLETE_GUIDE.md  NEXT_STEPS.md  POSITIONING.md  PRODUCTION_CHECKLIST.md  README.md  ROADMAP.md  ROADMAP_AND_VISION.md  SETUP_COMPLETE.md  TECHNICAL_GUIDE.md  TESTING_GUIDE.md  VISION.md  VISION_AND_ROADMAP.md  docker-compose.yml  package-lock.json  package.json  railway.json  start-autonomous.sh  stop-autonomous.sh
ai-core/: Dockerfile  Dockerfile.worker  nixpacks.toml  package.json  pyproject.toml  requirements-minimal.txt  requirements.txt  synthetic_training_data.json
ai-core/models/: deal_classifier_v1.pkl
ai-core/src/: __init__.py  config.py  main.py  main_simple.py
ai-core/src/agents/: autonomous_agent.py  base_agent.py  deal_intelligence.py  strategic_analyst.py
ai-core/src/models/: schemas.py
ai-core/src/services/: anomaly_detector.py  cache_service.py  deal_analyzer.py  deal_scorer.py  embeddings_service.py  feature_engineering.py  insights_analyzer.py  insights_generator.py  intelligent_insights_generator.py  memory_service.py  ml_deal_scorer.py  outcome_tracker.py  revenue_forecaster.py
ai-core/src/training/: train_deal_model.py
ai-core/src/utils/: logger.py  synthetic_data_generator.py
ai-core/src/workers/: __init__.py  continuous_monitor.py  deal_monitor.py
backend/: .env.example  .eslintrc.json  Dockerfile  nixpacks.toml  package.json  seed-demo-deal.ts
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  QUICKSTART.md
(+53 files in other folders)
